--- a/app/views/deals/_body_stores.html.erb
+++ b/app/views/deals/_body_stores.html.erb
@@ -103,9 +103,13 @@
 
   <hr>
 
+  <div class="catalog">
+    <a class="a01" href="/storedeals?sdcategory=Aliexpress">Aliexpress Deals</a> | 
+    <a href="/storedeals">SEE MORE</a>
+  </div>
   <div class="st_middle clearfix">
     <div class="st_middle_box clearfix">
-      <h2>Aliexpress Deals</h2>        
+      
       <% @sdcategory_01.each do |sd01| %>
         <figure class="deals_card deal_stores">
           <div class="image_box">
@@ -114,7 +118,7 @@
           </div>
           <div class="buy-now"><span><a target="_blank" href="<%= sd01.sd_link %>">BUY NOW</a></span></div>
           <figcaption>
-            <h3>#HashTag</h3>
+            <h3><%= render_with_sdhashtags(sd01.sd_hashtag.to_s) %></h3>
             <p class="store_title"><%= link_to sd01.sd_title, sd01 %></p>
             <div class="price">
               <em><%= number_to_currency(sd01.sd_spare_31) %></em><%= number_to_currency(sd01.sd_spare_32) %>
@@ -127,8 +131,11 @@
 
     <hr>
 
+    <div class="catalog">
+      <a class="a01" href="/storedeals?sdcategory=Walmart">Walmart Deals</a> | 
+      <a href="/storedeals">SEE MORE</a>
+    </div>
     <div class="st_middle_box clearfix">
-      <h2>Walmart Deals</h2>
       <% @sdcategory_02.each do |sd02| %>
         <figure class="deals_card deal_stores">
           <div class="image_box">
@@ -137,7 +144,7 @@
           </div>
           <div class="buy-now"><span><a target="_blank" href="<%= sd02.sd_link %>">BUY NOW</a></span></div>
           <figcaption>
-            <h3>#HashTag</h3>
+            <h3><%= render_with_sdhashtags(sd02.sd_hashtag.to_s) %></h3>
             <p class="store_title"><%= link_to sd02.sd_title, sd02 %></p>
             <div class="price">
               <em><%= number_to_currency(sd02.sd_spare_31) %></em><%= number_to_currency(sd02.sd_spare_32) %>
