--- a/app/views/storedeals/_navbar.html.erb
+++ b/app/views/storedeals/_navbar.html.erb
@@ -3,6 +3,7 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
+        <li class="coumos1 sd_all"><a href="/deals/stores">Home</a></li>
         <li class="coumos1 sd_all"><a href="/storedeals">All Category</a></li>
         <% Sdcategory.all.each do |sdc| %>
           <li><%= link_to sdc.name, storedeals_path(sdcategory: sdc.name) %></li>
