--- a/app/views/storedeals/show.html.erb
+++ b/app/views/storedeals/show.html.erb
@@ -92,7 +92,6 @@
               <% end %>
             <% end %>
            
-           
            </div>
           </div>
         </div>
@@ -103,11 +102,22 @@
           </div>
         <% end %>  
 
+
       </div>
     </div>
+      <!-- <div id="google_translate_element"></div>
+      <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'ar,en,es,jv,ko,zh-CN', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false}, 'google_translate_element');
+      }
+      </script>
+      <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>  
+      <div id="google_translate_element"></div> -->
+           
     
   </div>
 </div>
+
 <script><%= render(:partial => 'storedeals', :handlers => [:erb], :formats => [:js]) %></script>
 
 
