--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -7,7 +7,7 @@
 .hotdeals_new a{text-decoration:none;color:#fff;}
 
 /* Show Page */
-.show_wrap .show_box h2.sd_title{padding:0 50px;font-size:24px;margin-top:30px;}
+.show_wrap .show_box h2.sd_title{padding:10px 50px;font-size:24px;margin-top:30px;border:2px solid;}
 .show_wrap .show_box .sd_inner{margin-top:10px;}
 .show_wrap .show_box .show_inner a.p_btn{width:300px;text-align:center;}
 .show_wrap .show_box .show_inner a.store_btn{width:400px;text-align:center;}
