--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -36,6 +36,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.save_money{color:#B12704;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.expired{color:#fff;background:#ff0000;padding:5px 10px;width:100px;text-align:center;border-radius:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.endtoday{color:#ffa500;}
+.show_wrap .show_box .show_inner .hotdeal_inner .code_btn{margin-top:30px;}
 
 .show_wrap .show_box .show_inner .hotdeal_inner .show_des{border-top:1px solid #ccc;border-bottom:1px solid #ccc;margin:10px 0 20px 0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .description{font-size:15px;margin:15px 0;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
@@ -46,7 +47,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner p.code_line{margin:0 0 7px 0;font-size:11.5px;color:#616161;}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn{}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a{}
-.show_wrap .show_box .show_inner .hotdeal_inner .btn a em{font-weight:bold;font-size:15px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .btn a em{;font-size:15px;color:#e47911;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.sp_des{margin:0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info{margin-top:10px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:12.5px;display:block;margin-bottom:7px;}
