--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -74,7 +74,6 @@
               <% end %>
              </span> 
             <% end %>
-             <em>* Pricing may change and deals can expire fast.</em>
 
              <% if @hotdeal.h_spare_41.present? %>
               <% running_total = 0 %>
@@ -86,19 +85,20 @@
               <em class="save_money">* Save <%= number_to_currency(running_total) %> or more.</em>
              <% end %>
 
-
+             <% if @hotdeal.h_spare_01.present? %><em class="extra_dh">+ Get <%= @hotdeal.h_spare_01 %>% Off Extra Deal</em><% end %>
+             <% if @hotdeal.h_spare_02.present? %><em class="extra_dh">+ Clip the <%= @hotdeal.h_spare_02 %> Off Coupon</em><% end %>
              <em>+ FREE Shipping ( Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
              <% if @hotdeal.h_spare_10.present? %>
               <% @hotdeal.h_spare_10 %>
               <em>+ Check via Subscribe & Save ( Save 5% Off now and up to 15% Off on auto-deliveries <span><a href="https://amzn.to/2BzWhT4" target="_blank">Learn more</a></span> )</em>
              <% end %>
-             <% if @hotdeal.h_spare_01.present? %><em class="extra_dh">+ Get <%= @hotdeal.h_spare_01 %>% Off Extra Deal</em><% end %>
-             <% if @hotdeal.h_spare_02.present? %><em class="extra_dh">+ Clip the <%= @hotdeal.h_spare_02 %> Off Coupon</em><% end %>
              <% if @hotdeal.h_spare_14.present? %><em>+ Find more <a href="<%= @hotdeal.h_spare_15 %>">"<%= @hotdeal.h_spare_14 %>"</a></em><% end %>
+             <em>* Pricing may change and deals can expire fast.</em>
             </div>
 
-            <div class="btn">
-            <a class="m_btn" target="_blank" href="<%= @hotdeal.h_link %>">Check it out on&ensp;<em>Amazon</em></a>
+            <div class="code_btn">
+              <a class="m_btn" target="_blank" href="<%= @hotdeal.h_link %>">Check it out on&ensp;<em>Amazon</em></a>
+            </div>
 
             <%if @hotdeal.h_spare_21.present? %>
               <div class="trix trix-container gradient"><span>Features</span><p><%= @hotdeal.h_spare_21.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
@@ -107,8 +107,6 @@
                 <div class="show_des"><p class="description"><%= @hotdeal.h_description %></p></div>
               <% end %>
             <% end %>
-           
-           </div>
           </div>
         </div>
 
