--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -96,7 +96,7 @@
 
             </div><!--./store_info-->
 
-            <div class="btn">
+            <div class="code_btn">
               <a class="m_btn p_btn store_btn" target="_blank" href="<%= @storepromotion.sp_link %>">Check it out on &ensp;<em><%= @storepromotion.sp_store_name %></em></a>
             </div>
 
@@ -114,8 +114,6 @@
 
       </div><!--./show_box-->
       
-     
-
     </div><!--./wrap-->
   </div><!--./show_wrap-->
 </div><!--./layout-->
