--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -44,7 +44,7 @@
           <%= f.input :h_spare_14, label: 'Amazon Choice' %>
           <%= f.input :h_spare_15, label: 'Amazon Choice Link' %>
         </div>
-        <%= f.input :h_description, label: 'Description Of Product' %>
+        <!-- <%= f.input :h_description, label: 'Description Of Product' %> -->
         <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
 
         <div class="form_btn"><%= f.button :submit %></div>
