--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -36,7 +36,7 @@
       <%= f.input :p_spare_07, label: 'Amazon Choice' %>
       <%= f.input :p_spare_08, label: 'Amazon Choice Link' %>
     </div>
-    <%= f.input :p_description, label: 'Description Of Product' %>
+    <!-- <%= f.input :p_description, label: 'Description Of Product' %> -->
     <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>    
 
     <div class="form_btn"><%= f.button :submit %></div>
