--- a/app/views/storedeals/show.html.erb
+++ b/app/views/storedeals/show.html.erb
@@ -32,7 +32,13 @@
         <div class="show_inner sd_inner">
          <div class="hotdeal_inner">
 
-           <p class="offer"><span>@<%= @storedeal.sdcategory.name %></span> offers <em><%= @storedeal.sd_title %></em> on sale for <em class="pricing"><%= number_to_currency(@storedeal.sd_spare_32) %></em></p>
+           <p class="offer"><span>@<%= @storedeal.sdcategory.name %></span> offers <em><%= @storedeal.sd_title %></em> on sale for 
+            <% if @storedeal.sd_spare_32.present? %>
+              <em class="pricing"><%= number_to_currency(@storedeal.sd_spare_32) %></em>
+            <% else %>
+              <em class="pricing"><%= number_to_currency(@storedeal.sd_spare_34) %></em>
+            <% end %>
+           </p>
             
             <% if @storedeal.sd_spare_32.present? %>
               <p class="h_price"><%= number_to_currency(@storedeal.sd_spare_32) %> <span class="span_01"><%= number_to_currency(@storedeal.sd_spare_31) %></span><span class="span_02">( <%= @storedeal.sd_percentage %>% OFF )</span></p>
@@ -48,7 +54,6 @@
                   Avg <%= @storedeal.sd_spare_01 %> | <%= number_with_delimiter(@storedeal.sd_spare_02) %>+ reviews 
                  </span> 
                <% end %>
-               <em>* Pricing may change and deals can expire fast.</em>
                <% if @storedeal.sd_spare_31.present? %>
                 <% running_total = 0 %>
                 <% running_total =  @storedeal.sd_spare_31.to_i - @storedeal.sd_spare_32.to_i %>
@@ -58,6 +63,7 @@
                 <% running_total =  @storedeal.sd_spare_33.to_i - @storedeal.sd_spare_34.to_i %>
                 <em class="save_money">* Save <%= number_to_currency(running_total) %> or more.</em>
                <% end %>
+               <em>* Pricing may change and deals can expire fast.</em>
                <!-- <em>+ FREE Shipping</a></em> -->
 
 
