--- a/app/views/storedeals/_form.html.erb
+++ b/app/views/storedeals/_form.html.erb
@@ -38,7 +38,7 @@
       </div>
       <%= f.input :sd_spare_65, label: 'End Date' %><br />
       <!-- <%= f.input :sd_banner %> -->
-      <%= f.input :sd_description %>
+      <!-- <%= f.input :sd_description %> -->
       <%= f.input :sd_spare_50, as: :trix_editor, label: 'Description Of Product with TRIX'  %>
     </div>
 
