--- a/app/views/storedeals/show.html.erb
+++ b/app/views/storedeals/show.html.erb
@@ -109,6 +109,20 @@
           </div>
         <% end %>  
 
+        <!--
+          <% if @storedeal.sdcategory_id == 1 %> 
+            Aliexpress
+          <% end %>
+          <% if @storedeal.sdcategory_id == 2 %> 
+            Walmart
+          <% end %>
+          <% if @storedeal.sdcategory_id == 3 %> 
+            Traget
+          <% end %>
+          <% if @storedeal.sdcategory_id == 4 %> 
+            Bestbuy
+          <% end %>
+        -->
 
       </div>
     </div>
